# synapse_AI_Agent

./: .dockerignore  .gitignore  ARCHITECTURE.md  DEPLOY_NOTES.md  Dockerfile  LICENSE  README.md  alembic.ini  main.py  pyproject.toml  railway.toml
.github/workflows/: ci.yml
agents/: __init__.py  _common.py  analyst.py  equity_research_analyst.py  planner.py  react_agent.py  reviser.py  router_agent.py  writers.py
agents/graders/: __init__.py  grounding_grader.py  source_grader.py
api/: __init__.py  app.py  auth.py  dashboard.py  finance.py  routes.py  security.py
config/: configuration.yaml
db/: __init__.py  crud.py  models.py  session.py
db/migrations/: env.py
db/migrations/versions/: 0001_initial.py
deploy/: README.md
domains/: __init__.py  registry.py
evals/: __init__.py  harness.py  metrics.py
evals/datasets/: README.md  queries.json
evals/stock_picker/: __init__.py  baselines.py  harness.py  ledger.py  metrics.py  models.py  scorer.py  universe.py
exception/: custom_exception.py
frontend/: FRONTEND_NOTES.md  README.md  index.html  styles.css
frontend/js/: api.js  app.js  auth.js  dashboardView.js  financeView.js  loginView.js  markdown.js  planView.js  progressView.js  queryView.js  reportHistoryView.js  reportView.js  state.js  utils.js
graph/: __init__.py  builder.py  routers.py  state.py
graph/nodes/: __init__.py  assemble_report.py  create_analyst.py  final_answer.py  grounding_grader.py  human_in_the_loop.py  query_router.py  revise_section.py  scope_plan.py  write.py
graph/subgraphs/: __init__.py  retrieval_evidence.py  section_drafting.py
log/: __init__.py  logger.py
persistence/: __init__.py  checkpointer.py  source_store.py
prompts/: __init__.py  templates.py
prompts/rubrics/: grounding_grader_rubric.md  source_grader_rubric.md
schemas/: __init__.py  analyst.py  grading.py  plan.py  routing.py  section.py  source.py
tests/: __init__.py
tests/integration/: __init__.py  test_api.py  test_graph_build.py  test_graph_flow.py  test_placeholder.py
tests/unit/: __init__.py  test_dedup.py  test_normalize.py  test_persistence.py  test_placeholder.py  test_reducers.py  test_registry.py  test_routers.py  test_schemas.py
tools/: __init__.py  arxiv.py  external_api.py  finance.py  mcp.py  registry.py  tech_blogs.py  web_search.py  wiki.py
tools/processing/: __init__.py  dedup.py  normalize.py
utils/: config_loader.py  model_loader.py
