[project]
name = "synapse-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "structlog>=26.1.0",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.3",
    "langchain-groq>=1.1.3",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["utils", "log", "exception", "schemas", "graph", "agents", "tools", "domains", "persistence", "prompts"]
