[project]
name = "synapse-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "structlog>=26.1.0",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.3",
    "langchain-groq>=1.1.3",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    # Tool-layer retrieval dependencies (keyless)
    "arxiv>=2.1.0",
    "wikipedia>=1.4.0",
    "ddgs>=9.0.0",
    # SQLite-backed LangGraph checkpointing
    "langgraph-checkpoint-sqlite>=2.0.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Adds the repo root to sys.path so absolute imports (from schemas.source import Source) resolve.
pythonpath = ["."]
# Keeps tests fast; any test hitting the network will timeout and be investigated.
timeout = 30

[tool.setuptools]
packages = ["utils", "log", "exception", "schemas", "graph", "agents", "tools", "domains", "persistence", "prompts"]
